--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,12 +3,11 @@ name: Docker
 on:
   push:
     branches:
-      - main
+      - testing
 
 jobs:
   docker:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/testing'
     steps:
       - uses: actions/checkout@v3
       - name: Log In at ghcr.io
