--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+### Emacs ###
+*~
+\#*#
+.#*#
 
 # Created by https://www.gitignore.io/api/python
 # Edit at https://www.gitignore.io/?templates=python
